Modify background to white and fix alignment

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -151,6 +151,8 @@
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
     -fx-text-fill: black;
+    -fx-border-color: black;
+    -fx-border-width: 1px;
 }
 
 .result-display .label {
